# wtaf

./: .gitignore  Cargo.toml  rsync-to-atrium.sh
src/: main.rs
