[package]
name = "reqwest-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buf-list = "1.0"
bytes = "1.4"
futures = "0.3"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
tokio = { version = "1.29", features = ["full"] }

[profile.release]
panic = "abort"
